--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,29 @@
+--extra-index-url https://download.pytorch.org/whl/cu126
 accelerate==1.12.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 anyio==4.12.0
+attrs==25.4.0
 basedpyright==1.34.0
+bitsandbytes==0.48.2
+braceexpand==0.1.7
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+controlnet-aux==0.0.10
+datasets==4.4.1
 diffusers==0.35.2
+dill==0.4.0
 docstring-parser==0.17.0
 einops==0.8.1
-filelock==3.20.0
-flash-attn @ file:///root/diffusion-visual-challenge/flash_attn-2.7.4.post1+cu126torch2.6-cp312-cp312-linux_x86_64.whl
-fsspec==2025.10.0
+filelock==3.19.1
+flash-attn==2.8.3
+frozenlist==1.8.0
+fsspec==2025.9.0
 h11==0.16.0
+hakubooru==0.0.3
+hf-transfer==0.1.9
 hf-xet==1.2.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -21,44 +34,61 @@ imageio-ffmpeg==0.5.1
 importlib-metadata==8.7.0
 iniconfig==2.3.0
 jinja2==3.1.6
+lazy-loader==0.4
 markdown-it-py==4.0.0
-markupsafe==3.0.3
+markupsafe==2.1.5
 mdurl==0.1.2
 mpmath==1.3.0
-networkx==3.6
+multidict==6.7.0
+multiprocess==0.70.18
+networkx==3.5
 nodejs-wheel-binaries==24.11.1
-numpy==1.26.4
+numpy==2.3.3
 nvidia-cublas-cu12==12.6.4.1
 nvidia-cuda-cupti-cu12==12.6.80
 nvidia-cuda-nvrtc-cu12==12.6.77
 nvidia-cuda-runtime-cu12==12.6.77
 nvidia-cudnn-cu12==9.5.1.17
 nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
 nvidia-curand-cu12==10.3.7.77
 nvidia-cusolver-cu12==11.7.1.2
 nvidia-cusparse-cu12==12.5.4.2
 nvidia-cusparselt-cu12==0.6.3
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvshmem-cu12==3.3.20
 nvidia-nvtx-cu12==12.6.77
+opencv-python==4.12.0.88
+opencv-python-headless==4.12.0.88
 packaging==25.0
+pandas==2.3.3
+peewee==3.18.3
 peft==0.18.0
-pillow==10.4.0
+pillow==11.3.0
 pip==25.3
 pluggy==1.6.0
+propcache==0.4.1
 psutil==7.1.3
+pyarrow==22.0.0
 pygments==2.19.2
 pytest==9.0.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
 pyyaml==6.0.3
 regex==2025.11.3
 requests==2.32.5
 rich==13.9.2
 safetensors==0.7.0
+scikit-image==0.25.2
 scipy==1.16.3
-setuptools==80.9.0
+setuptools==70.2.0
 shellingham==1.5.4
 shtab==1.8.0
+six==1.17.0
 sympy==1.13.1
+tifffile==2025.10.16
+timm==1.0.22
 tokenizers==0.22.1
 torch==2.6.0+cu126
 torchaudio==2.6.0+cu126
@@ -71,6 +101,10 @@ triton==3.2.0
 typer-slim==0.20.0
 typing-extensions==4.15.0
 tyro==0.8.5
+tzdata==2025.2
 urllib3==2.5.0
+webdataset==1.0.2
 wheel==0.45.1
+xxhash==3.6.0
+yarl==1.22.0
 zipp==3.23.0
